docs: update docs https://github.com/eutiveumsonho/eutiveumsonho/commit/51ce4343ace0865429cb6d458996bde813b502b5

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <h1>Home</h1>
     <li>
       <!-- @jsdoc-builder-action new-version -->
+      <li><a href="./eutiveumsonho/1.27.0/pages_inbox.jsx.html">eutiveumsonho/1.27.0/pages_inbox.jsx.html</a></li>
       <li><a href="./eutiveumsonho/1.26.0/module-pages_publish__postId.html">eutiveumsonho/1.26.0/module-pages_publish__postId.html</a></li>
       <li><a href="./eutiveumsonho/1.26.0/module-pages_dreams__dreamId.html">eutiveumsonho/1.26.0/module-pages_dreams__dreamId.html</a></li>
       <li><a href="./eutiveumsonho/1.25.7/module-pages_dreams__dreamId.html">eutiveumsonho/1.25.7/module-pages_dreams__dreamId.html</a></li>
